--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,9 +13,23 @@ play-services-maps = "18.1.0"
 play-services-location = "21.0.1"
 retrofit = "2.9.0"
 converter-gson = "2.9.0"
+places = "3.2.0"
+legacy-support-v4 = "1.0.0"
+lifecycle-livedata-ktx = "2.6.1"
+lifecycle-viewmodel-ktx = "2.6.1"
+activity = "1.8.0-alpha06"
+fragment = "1.7.0-alpha02"
+navigation-fragment = "2.7.0"
+livedata = "1.1.1"
+coil = "2.4.0"
+baseLibrary = "3.2.0-alpha11"
+databindingAdapters = "8.1.0"
+navigationUi = "1.0.0"
+androidx-navigationUi = "2.7.0"
+glide = "4.15.1"
 
 [libraries]
-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
+core-ktx = { group = "androidx.core", name = "core-ktx", version = "1.10.1" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
@@ -26,6 +40,20 @@ play-services-maps = { group = "com.google.android.gms", name = "play-services-m
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "play-services-location" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "converter-gson" }
+places = { group = "com.google.android.libraries.places", name = "places", version.ref = "places" }
+legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacy-support-v4" }
+lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycle-livedata-ktx" }
+lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle-viewmodel-ktx" }
+androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+androidx-fragment = { group = "androidx.fragment", name = "fragment", version.ref = "fragment" }
+androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigation-fragment" }
+livedata = { group = "android.arch.lifecycle", name = "livedata", version.ref = "livedata" }
+coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
+androidx-baseLibrary = { group = "androidx.databinding", name = "baseLibrary", version.ref = "baseLibrary" }
+androidx-databinding-adapters = { group = "androidx.databinding", name = "databinding-adapters", version.ref = "databindingAdapters" }
+navigation-ui = { group = "android.arch.navigation", name = "navigation-ui", version.ref = "navigationUi" }
+androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "androidx-navigationUi" }
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
