--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,8 @@ databindingAdapters = "8.1.0"
 navigationUi = "1.0.0"
 androidx-navigationUi = "2.7.0"
 glide = "4.15.1"
+datastore = "1.1.0-alpha04"
+datastorePreferences = "1.1.0-alpha04"
 
 [libraries]
 androidx-navigation-safe-args-gradle-plugin = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "navigation-fragment" }
@@ -55,6 +57,8 @@ androidx-databinding-adapters = { group = "androidx.databinding", name = "databi
 navigation-ui = { group = "android.arch.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "androidx-navigationUi" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+androidx-datastore = { group = "androidx.datastore", name = "datastore", version.ref = "datastore" }
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastorePreferences" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
